--- a/ExpertMed/Views/Consultation/NewConsultation.cshtml
+++ b/ExpertMed/Views/Consultation/NewConsultation.cshtml
@@ -11,6 +11,7 @@
 
     var usuarioId = ViewContext.HttpContext.Session.GetInt32("UsuarioId");
     var perfilId = ViewContext.HttpContext.Session.GetInt32("PerfilId");
+    var especialidadId = ViewContext.HttpContext.Session.GetInt32("UsuarioEspecialidadId");
 
 }
 
@@ -40,7 +41,7 @@
                   <input type="hidden" class="form-control" id="consultation_usercreate" value="@usuarioId" />
                 <input type="hidden" id="consultation_sequential" value="0" />
                 <input type="hidden" id="consultation_patient" value="@Model.DetailsPatient.PatientId" />
-                <input type="hidden"  id="consultation_speciality" value="0" />
+                <input type="hidden" id="consultation_speciality" value="@especialidadId" />
                 <input type="hidden"  id="consultation_date" value="" />
                 <input type="hidden" id="consultation_type" value="1" />
                 <input type="hidden" id="consultation_status" value="1" />
@@ -651,7 +652,7 @@
                                         }
 
                                     </select>
-                                    <input type="hidden" id="selectallergiesId"
+                                    <input type="text" id="selectallergiesId"
                                            name="selectallergiesId">
 
                                 </div>
@@ -677,7 +678,7 @@
                                         }
                                     </select>
                                     <!-- Input oculto para enviar los IDs seleccionados -->
-                                    <input type="hidden" id="selectSurgeriesId"
+                                    <input type="text" id="selectSurgeriesId"
                                            name="selectSurgeriesId">
                                 </div>
                             </div>
@@ -808,7 +809,7 @@
 
                             <div class="col-lg-5">
                                 <div class="mb-3">
-                                    <select class="form-control" id="FamilyMembers"
+                                    <select class="form-control" id="familiary_background_relatshcatalog_hypertension"
                                             name="familiary_background_relatshcatalog_hypertension" data-choices
                                             data-choices-sorting-false>
                                         <option value="">Select your family member</option>
@@ -1409,7 +1410,7 @@
 
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" role="switch"
-                                       id="SwitchCheckNeck">
+                                       id="physicalexamination_neck">
                                 <label class="form-check-label" for="SwitchCheckNeck">Neck</label>
                             </div>
 
